small java complaints